2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-fetch-partial-articles): Minor doc string fixup.

2012-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-resend-message-insert-gcc): Assume that
	gnus-gcc-self-resent-messages may be a group parameter.
	(gnus-summary-resend-message): Don't encode encoded words in header
	when Gcc'ing resent message.

2012-03-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Treat non-breaking space just like normal
	space.  This seems to produce more pleasing results.
	(shr-insert): Only insert a blank line if we're starting from an image.
	(shr-tag-br): Allow <br> to end lines or to make a single blank line.
	(shr-ensure-paragraph): Consider lines with white space to be blank.

2012-03-15  Elias Pipping  <pipping@lavabit.com>

	* Makefile.in: Respect DESTDIR.

2012-03-14  Christopher Schmidt  <christopher@ch.ristopher.com>

	* gnus-msg.el (gnus-inews-do-gcc): Add gnus-gcc-pre-body-encode-hook
	and gnus-gcc-post-body-encode-hook.

2012-03-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-expire-articles-1): Don't try to expire
	messages that don't exist.

	* gnus-sum.el (gnus-summary-expire-articles): Ditto.

2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-netrc-create): Quote tokens that contain
	"#" to avoid having them interpreted as comments.

2012-03-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Update the text state properly to avoid
	inserting spurious paragraph starts.

2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-widths): Divide the extra width more fairly over
	the TDs (bug#10973).
	(shr-render-td): Don't delete too much padding.
	(shr-natural-width): Compute the natural width more correctly.
	(shr-insert): Allow the natural width to be computed for tables again.